testfx/errors/error_tests/err_04_loop_missing_body.fx
// 测试4: 循环错误 - L> 后缺少循环体
L> (10)
println("test")
